@@ -157,7 +157,6 @@ class Prime
   # +value+:: an arbitrary integer to be checked.
   # +generator+:: optional. A pseudo-prime generator.
   def prime?(value, generator = Prime::Generator23.new)
-    value = -value if value < 0
     return false if value < 2
     for num in generator
       q,r = value.divmod num
